--- a/class3/index.html
+++ b/class3/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="this is the page about the batman">
     <title>Images</title>
     <link rel="stylesheet" href="style.css" />
   </head>
